adiocionado pacotes de orm e autenticacao jwt

--- a/Strab.Domain.Api/appsettings.Development.json
+++ b/Strab.Domain.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "mysqlConnection": "Server=strabapi.mysql.dbaas.com.br;DataBase=strabapi;Uid=strabapi;Pwd=strabapi@123"
   }
 }
