--- a/Strab.Domain.Api/appsettings.json
+++ b/Strab.Domain.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "mysqlConnection": "Server=strabapi.mysql.dbaas.com.br;DataBase=strabapi;Uid=strabapi;Pwd=strabapi@123"
+  },
   "AllowedHosts": "*"
 }
