--- a/Strab.Domain.Infra/Strab.Domain.Infra.csproj
+++ b/Strab.Domain.Infra/Strab.Domain.Infra.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Strab.Domain\Strab.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
