--- a/Strab.Domain.Tests/Strab.Domain.Tests.csproj
+++ b/Strab.Domain.Tests/Strab.Domain.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
@@ -16,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Strab.Domain\Strab.Domain.csproj" />
+    <ProjectReference Include="..\Strab.Domain.Api\Strab.Domain.Api.csproj" />
   </ItemGroup>
 
 </Project>
