--- a/Strab.Domain.Infra/Strab.Domain.Infra.csproj
+++ b/Strab.Domain.Infra/Strab.Domain.Infra.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2" />
   </ItemGroup>
 
   <PropertyGroup>
