adicionado mappers and dtos

--- a/Strab.Domain.Tests/Strab.Domain.Tests.csproj
+++ b/Strab.Domain.Tests/Strab.Domain.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="moq" Version="4.16.1" />
