--- a/Strab.Domain/Strab.Domain.csproj
+++ b/Strab.Domain/Strab.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="flunt" Version="2.0.5" />
   </ItemGroup>
 
